# liquid_state_machine_cpp_port

./: .gitignore  CMakeLists.txt  ENCODE_INTEGRATE_PIPELINE_README.md  FIGURES.md  Makefile  README.md  Z_CLS_WM_XOR_README.md  data  dev.sh  network_snapshot.npz  results_3_16.md
LIF_objects/: SphericalNeuronalNetworkVectorized.py
cpp/: npz_reader.cpp  npz_reader.h
docker/: Dockerfile
experiments/: analyze_gtonic_robustness.py  gen_3panel_diagnostic.py  gen_activity_vis.py  gen_input_diagnostic.py  gen_top_configs.py  gen_wm_activity_vis.py  plot_ablation.py  plot_adapt_at_b_onset.py  plot_adapt_profiles.py  plot_adapt_raster.py  plot_adaptation_heatmap.py  plot_bsa_comparison.py  plot_crossover_scatter.py  plot_crossover_sweep.py  plot_dynamics_sign_flip.py  plot_gap_sweep.py  plot_gap_sweep_ext.py  plot_grid_pca.py  plot_hidden_states.py  plot_input_grid.py  plot_isi_heatmap.py  plot_multi_seed.py  plot_network_graph.py  plot_pareto_cls_wm.py  plot_perbin_traces.py  plot_raster.py  plot_regime_dynamics.py  plot_selectivity.py  plot_sweep_snapshots.py  plot_temporal_encoding_tradeoff.py  plot_triplet_bsa_comparison.py  plot_tuning_curves.py  plot_tuning_detail.py  plot_wm_raster_adapt.py  plot_wm_xor_top_regions.py  readout_benchmark.py
experiments/sim_efficiency_benchmarking/: README.md  bench_caller_loop  bench_caller_loop.cpp  sim_efficiency_benchmarking  sim_efficiency_benchmarking.cpp
project/: Dockerfile  cls_sweep  plot_results.py
project/cpp/: builder.h  common.h  main.cpp  network.cpp  network.h
project/experiments/: classification_adaptation_sweep.py
results/: pca_spectrograms.csv
results/ablation/: ablation_results.json
results/activity_vis/: lsm_activity.html
results/classification_adaptation_sweep/: README.md  RESULTS.md  classification_adaptation_sweep.json  classification_adaptation_sweep_checkpoint.json  gtonic_robustness.json
utils/: network_builder.py  simulation_utils.py
(+55 files in other folders)
